<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="193dp"
        android:layout_height="234dp"
        android:layout_marginStart="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="435dp">

        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="7dp"
            app:layout_constraintStart_toStartOf="parent"

            tools:layout_editor_absoluteY="489dp">

            <EditText
                android:id="@+id/editTextNumberDecimal"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/cartoucha"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="20dp"
                android:text="@string/flux_du_polluant"
                android:textColor="#BE000000"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/editTextNumberDecimal1"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/cartoucha"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="20dp"
                android:text="@string/Stability"
                android:textColor="#BE000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/editTextNumberDecimal2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/cartoucha"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="20dp"
                android:text="@string/hauteur"
                android:textColor="#BE000000"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="193dp"
        android:layout_height="234dp"
        android:layout_marginStart="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="435dp">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"

            tools:layout_editor_absoluteY="489dp">

            <EditText
                android:id="@+id/editTextNumberDecimal3"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/cartoucha"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="20dp"
                android:text="@string/x"
                android:textColor="#BE000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/editTextNumberDecimal4"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/cartoucha"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="20dp"
                android:text="@string/y"
                android:textColor='#BE000000'/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/editTextNumberDecimal5"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/cartoucha"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="20dp"
                android:text="@string/z"
                android:textColor='#BE000000'/>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="425dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="calculates pollution rate"
        android:textColor="#6672FF"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>